/// One embedded chunk of app content (task, comment, epic, milestone, sprint).
model DocumentEmbedding {
  id          String              @id @default(dbgenerated("gen_random_uuid()"))
  projectId   String // hard permission-scope key
  entityType  EmbeddingEntityType
  entityId    String // source row id
  chunkIndex  Int                 @default(0)
  content     String // the exact text that was embedded (for citations)
  tokenCount  Int                 @default(0)
  // 1536-dim Matryoshka-truncated Gemini embedding (see §4.1)
  embedding   Unsupported("vector(1536)")
  // Generated FTS vector over `content` for hybrid lexical search (§4.4, M5).
  // STORED generated column; the GIN index is created in raw migration SQL.
  contentTsv  Unsupported("tsvector")?
  contentHash String // sha256(content) — skip re-embed if unchanged
  model       String              @default("gemini-embedding-001")
  createdAt   DateTime            @default(now()) @db.Timestamp(6)
  updatedAt   DateTime            @default(now()) @updatedAt @db.Timestamp(6)

  @@unique([entityType, entityId, chunkIndex])
  @@index([projectId, entityType])
}

/// Work queue: a row here means "(re)embed this entity". Written by app events, drained by the cron.
model IndexOutbox {
  id            String              @id @default(dbgenerated("gen_random_uuid()"))
  projectId     String
  entityType    EmbeddingEntityType
  entityId      String
  op            IndexOp             @default(UPSERT)
  status        OutboxStatus        @default(PENDING)
  attempts      Int                 @default(0)
  /// Earliest time the sweeper may (re)try this row — powers exponential backoff.
  nextAttemptAt DateTime            @default(now()) @db.Timestamp(6)
  /// Last failure message, for debugging FAILED rows (null once DONE).
  lastError     String?
  createdAt     DateTime            @default(now()) @db.Timestamp(6)
  updatedAt     DateTime            @default(now()) @updatedAt @db.Timestamp(6)

  @@unique([entityType, entityId]) // collapse repeated edits into one pending job
  @@index([status, nextAttemptAt])
}

/// Telemetry for every copilot call — powers the eval dashboard and demo "receipts".
model CopilotQueryLog {
  id                String   @id @default(dbgenerated("gen_random_uuid()"))
  userId            String
  projectId         String?
  question          String
  retrievedIds      String[] // DocumentEmbedding ids used
  topScore          Float?
  answer            String
  citationsCount    Int      @default(0)
  faithfulnessScore Float? // 0..1 from the judge
  promptTokens      Int      @default(0)
  latencyMs         Int      @default(0)
  createdAt         DateTime @default(now()) @db.Timestamp(6)

  @@index([userId, createdAt])
}

enum EmbeddingEntityType {
  TASK
  TASK_COMMENT
  EPIC
  MILESTONE
  SPRINT
}

enum IndexOp {
  UPSERT
  DELETE
}

enum OutboxStatus {
  PENDING
  DONE
  FAILED
}
